css/styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 1rem;
  font-weight: normal;
  line-height: 1.5;
}

body {
  width: 100%;
  min-height: 100vh;
  background-color: #fff;
  padding: .5rem;
}

img {
  width: 200px;
  height: auto;
}

/* header header */
header {
  width: 100%;
  max-width: 1110px;
  margin: .2rem auto;
  background-image: url('../images/stocksnap-leafs.jpg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  border-radius: .9rem;
  font-family: Roboto, sans-serif;
}

header .container {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 3rem;
  min-height: 100vh;
  justify-content: space-between;
}

header .container .navbar {
  display: flex;
  padding: .5rem 1rem;
  color: #fff;
  align-items: center;
}

header .container .navbar ul {
  list-style: none;
  margin-left: auto;
  display: flex;
  gap: 1.5rem;
  align-items: center;
}

.navbar ul li{
  background-color: #ffffff33;
  backdrop-filter: blur(10px);
  width: 80px;
  text-align: center;
  border-radius: .5rem;
}

.navbar ul li a {
  font-size: .8rem;
  font-weight: bold;
  color: inherit;
  text-decoration: none; 
}

.navbar ul li:hover {
  background-color: #fff;
  color: #252525;
  cursor: pointer;
}


header .container .heading-information {
  align-self: center;
  padding: 3.5rem 5.5rem;
  display: flex;
  flex-direction: column;
  color: #fff;
  font-family: Roboto, sans-serif;

}

header .container .heading-information .top-head {
  font-size: 1.3rem;
  font-weight: bold;
}

header .container .heading-information .main-heading {
  font-size: clamp(40px, 20vw, 200px);
  font-weight: bold;
  text-align: center;
  font-family: Outfit, sans-serif;
  text-shadow: 5px 5px 5px #0a0a0a;
}

header .container .heading-information .description {
  color: #ffffff9a;
  font-size: 1rem;
  text-align: center;
}


header .container .side-actions {
  display: flex;
  flex-wrap: wrap;
  padding: 1rem 1.5rem;
}

header .container .side-actions .left-side-action {
  display: flex;
  min-height: 200px;
  gap: 2px;
  flex: 2 1 50%;
}

header .container .side-actions .left-side-action .header-plants-info-bar {
  background-color: #ffffff18;
  padding: 1rem;
  backdrop-filter: blur(20px);
  border-radius: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  flex: 3 1 120px;
  min-width: 250px;
  
  .bold-title {
    color: #fff;
    font-size: clamp(20px, 5vw, 25px);
    font-weight: bold;
    margin-bottom: 1rem;
  }

  .plants-description {
    font-size: 1rem;
    color: #ffffffd0;
  }
}

header .container .side-actions .left-side-action .slide-vertical-menu {
  display: flex;
  flex-direction: column;
  position: relative;
  gap: 1rem;
  padding: 1rem;
  justify-content: center;
  align-items: center;
  background-color: #ffffff18;
  border-radius: 2rem;
  backdrop-filter: blur(20px);
  flex: 1 1 50px;
  img {
    width: 60px;
    height: 60px;
    border-radius: 50%;
  }

}


header .container .side-actions .right-side-action {
  flex: 2 1 50%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-end;
  gap: 1rem;
  position: relative;
  .slide-anchor-bottom-link {
    color: #ffffffb7;
    font-size: clamp(40px, 5vw, 60px);
    font-weight: lighter;
  }

  button.shop-tropical-plants-btn {
    display: block;
    background-color: #ffffff18;
    backdrop-filter: blur(30px);
    padding: 1.1rem 2.5rem;
    border-radius: 1.8rem;
    color: #fff;
    border: none;
    outline: none;
    cursor: pointer;
    font-family: inherit;
    font-size: 1rem;
    font-weight: bold;
    text-shadow: 1px 1px 1px #252525;
  }
}

/* header header */

